Update install instructions