@@ -1,26 +1,14 @@
 ---
 layout: post
 title:  "Getting Started on Linux"
-date:   2015-11-21 06:24:13
+date:   2019-09-28 06:00:00
 categories: jruby_art update
 permalink: /linux_started/
 ---
 
-### Getting Started With JRubyArt (stolen from [Ben Lewis][ben]) ###
+### Getting Started With JRubyArt ###
 
-If you love to code because it is a creative process, then you should give JRubyArt a try because it can be used to [create music][sound], art, animations, [videos][video] and much more. Also since it is based on the latest [Processing][processing] you can access a vast range of libraries to make the difficult things easier.
-
-### What Is Processing? ###
-
-Processing is a simple language, based on Java, that you can use to create digital graphics. It's easy to learn, fun to use, and has an amazing online community comprised of programmers, visual artists, musicians, and interdisciplinary artists of all kinds.
-
-Processing was built by Benjamin Fry and [Casey Reas][casey] ☯, two protegés of interdisciplinary digital art guru John Maeda at the MIT Media Lab.
-
-Since the project began in 2001, it's been helping teach people to program in a visual art context using a simplified version of Java. It comes packaged as an IDE that can be downloaded and used to create and save digital art “sketches”.
-
-In 2009, Jeremy Ashkenas (aka jashkenas, creator of Backbone.JS, Underscore.JS, and Coffeescript), published the original [ruby-processing gem][gem]. It wraps Processing in a shim that makes it even easier to get started if you know Ruby. It has been since updated to use processing-2.2.1 by Martin Prout (final version using jruby-1.7.27 corresponding to ruby-2.3.0 syntax), NB: no more releases are expected, and ruby-processing is not compatible with processing-3.0+.
-
-In 2015, Martin Prout (aka monkstone) published the [JRubyArt gem][jrubyart], loosely based on the original ruby-processing, since update to use processing-3.5.3 and jruby-9.2+ (ruby-2.4+ syntax)
+If you love to code because it is a creative process, then you should give JRubyArt a try because it can be used to create music, art, animations, videos and much more. Also since it is based on the latest [Processing][processing] you can access a vast range of libraries to make the difficult things easier.
 
 ### Why JRubyArt? ###
 
@@ -32,150 +20,225 @@ Additionally, you don't have to declare types, voids, or understand the differen
 
 Although there are some drawbacks to using the Ruby version Processing (slower start up time, and sometimes performance), having Ruby's API available to translate your ideas into sketches more than makes up for them.
 
-Why was ruby-processing not updated to use processing3.0+? The [major changes][changes] between processing-2.2.1 and processing-3.0 are not backward compatible. Furthermore since JRubyArt was designed to use jruby-9.0.0.0+ from the outset, it makes use of the more literate ruby2.4+ syntax (although the original ruby-processing might run with jruby-9.2+, the examples and the ruby-processing library are all based on ruby-2.3.0 syntax).
 
 ### Pure JRuby Setup Archlinux ###
 
 Install Software as required:-
 
-Currently stock OpenJDK12 has a linking problem affecting P2D and P3D sketches, install adopt-openjdk12 instead.
+Currently stock OpenJDK12 has a linking problem affecting P2D and P3D sketches, so install [adopt-openjdk12][adopt] instead.
 
 ```bash
-sudo pacman -S java-openjfx # installs openjfx
+sudo pacman -S ruby # installs ruby-2.6
 sudo pacman -S jruby # installs jruby-9.2.8.0
-sudo pacman -S processing # installs processing-3.5.3  (community)
 ```
 
-Configure in `~/.jruby_art/config.yml`:-
-```yaml
----
-processing_ide: false
-library_path: "/home/tux/.jruby_art"
-MAX_WATCH: 32
-JRUBY: true
-template: bare
-java_args: --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED
-```
-
-
-
-Install JRubyArt
+Install gems as required
 ```bash
-jruby -S gem install jruby_art
-jruby -S gem install toxiclibs # optional
-jruby -S gem install pbox2d # optional
-jruby -S gem install geomerative # optional
+gem install jruby_art
+gem install toxiclibs # optional
+gem install pbox2d # optional
+gem install geomerative # optional
+```
+If you wish install vanilla processing, but it is not required since JRubyArt-2.0.
+
+If you __haven't__ installed JRubyArt before you should:-
+
+```bash
+k9 --install # no arguments
+```
+To configure JRubyArt, install samples, and also install jruby-complete
+
+If you __have__ installed JRubyArt before you should:-
+
+```bash
+k9 -fi config # -f or --force flags force removal of previous configuration
 ```
 
-Install vanilla processing libraries from processing-3.5.3 ide (recommended audio, video)
+Use:-
+
+```bash
+k9 --help # or -h to show command line options
+# or
+k9 --check # or -? to check configuration
+```
 
 ### Pure JRuby Setup Debian (Mint, Ubuntu) ###
 
-The simplest way to install openjdk (but with less control over version etc)
+#### Java ####
+
+Unfortunately there is currently a linker problem with stock OpenJDK on linux so we are recommending installing [adoptopenjdk][adopt] version which is available as a deb package. But you have to add the repository to your setup as follows:-
 
 ```bash
-sudo add-apt-repository ppa:webupd8team/java
+wget -qO - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public | sudo apt-key add -
+
+sudo add-apt-repository --yes https://adoptopenjdk.jfrog.io/adoptopenjdk/deb/
+
+sudo apt-get install -y software-properties-common
+
 sudo apt-get update
-sudo apt-get install oracle-java8-installer
+
+sudo apt-get install openjdk-12-hotspot
 ```
 
-Alternative method (that puts you in control), download and install latest OpenJDK11 (in the `/opt` folder makes sense)
-
-Use `update-alternatives` to install and maintain configuration eg for java:-
+Use debian `update-alternatives` tool to manage configuration for java:-
 ```bash
-sudo update-alternatives --install /usr/bin/java java /opt/jdk1.8.0_181/bin/java 100
 sudo update-alternatives --config java # to configure if required
+sudo update-alternatives --config javac # to configure if required
+sudo update-alternatives --config jar # to configure if required
 ```
+#### MRI Ruby
+
+Install MRI ruby (should be at least ruby-2.4), if you are not using `rvm` or `rbenv`, then you should create a home in a local folder to store your gems eg `~/.gem/ruby/2.5.0` to store your gems:-
+
+```bash
+mkdir -p ~/.gem/ruby/2.5.0
+```
+
+To get `gem` command to use this location set `GEM_HOME` and `GEM_PATH` in `~/.profile` and add the `GEM_PATH/bin` to `PATH` as below:-
+
+```bash
+export GEM_HOME="$HOME/.gem/ruby/2.5.0"
+export GEM_PATH="$HOME/.gem/ruby/2.5.0"
+# set PATH so it includes user's private bin directories
+export PATH="$HOME/bin:$HOME/.local/bin:$GEM_PATH/bin:$PATH"
+```
+
+#### JRuby
 
 Download and install latest jruby (in the `/opt` folder makes sense)
 
-Use `update-alternatives` to install and maintain configuration eg for java:-
+Use `update-alternatives` to install and maintain configuration eg for jruby:-
 ```bash
 sudo update-alternatives --install /usr/bin/jruby jruby /opt/jruby-9.2.8.0/bin/jruby 100
 sudo update-alternatives --config jruby # to configure if required
 ```
 
-### JRubyArt
+#### JRubyArt
 
-JRubyArt needs to know where you've installed your libraries (_for the video and audio libraries etc_), and whether you've done a system/user install of jruby. Since jdk9 reflective access to certain methods and fields is warned about, it is possible to suppress these warnings by using java command-line flag `--add-opens`. See configuration file below (global) or locally in a `data/java_args.txt` text file.
-
-Config file is `config.yml` in the `~/.jruby_art folder`.
-
-```yaml
----
-processing_ide: false
-library_path: "/home/tux/.jruby_art"
-MAX_WATCH: 32
-JRUBY: true
-template: bare
-java_args: --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED
-```
-
-
-Otherwise you can check to see what platforms are officially supported [here][platforms].
-
-Download processing-3.5.3 from the [official website][official] and install, prefer to install in say `~/processing-3.5.3`, that way you can keep processing-2.2.1 (or earlier version of processing), which you may find useful.  When you're done, make sure to take note of the directory you installed the app to complete the configuration.
-
-Complete the install as for Archlinux (make sure `k9` is on your path or use `jruby -S k9`)
-
-### Alternative JRuby-Complete Setup Debian (Mint, Ubuntu) ###
-
-Download and install latest OpenJDK11 as above, although openjdk (upto jdk11) also seems to work.
-
-Install MRI ruby (must be at least ruby-2.3)
-
-https://www.ruby-lang.org/en/documentation/installation/ (NB: most distros are hopelessly out of data)
-
-
-If using `rvm` or `rbenv` make sure you are using ruby2.4+
+Install gems as required
 ```bash
 gem install jruby_art
-k9 --install # installs jruby-complete, and examples
+gem install toxiclibs # optional
+gem install pbox2d # optional
+gem install geomerative # optional
 ```
+If you wish install vanilla processing, but it is not required since JRubyArt-2.0.
 
-NB: you may find that you are unable to use gems in your sketches unless you have used jruby to install them.
-
-### Running examples
-
-To run a bunch of the samples as a demo:-
+If you __haven't__ installed JRubyArt before you should:-
 
 ```bash
-cd ~/k9_samples/contributed # for example
-rake # autoruns files in contributed folder
-k9 --run jwishy.rb # run the JWishy sketch, using an installed jruby
-cd ~/k9_samples/processing_app/topics/shaders
-rake # autoruns shader sketches
-k9 --run monjori.rb # run the Monjori sketch with jruby-complete
+k9 --install # no arguments
 ```
+To configure JRubyArt, install samples, and also install jruby-complete
 
-### Creating your own sketch
-
-All we ask is that you obey the ruby filename convention (ie snakecase) and we can create a template sketch for you as follows:-
+If you __have__ installed JRubyArt before you should:-
 
 ```bash
-k9 --create fred_sketch 200 200 # creates a bare sketch fred_sketch.rb (see below)
-vim fred_sketch.rb # other editors are available
-:!k9 -r % # from vim runs the sketch
+k9 -fi config # -f or --force flags force removal of previous configuration
 ```
 
-You may want to try other [development environments][editor] eg atom, emacs or even netbeans. Needless to say your distro can install these for you, but they need a bit of post install love get the best out of them (vim in the main just works, and is super light weight).
+Use:-
 
-```ruby
-def setup
-  sketch_title 'Fred Sketch'
-end
-
-def draw
-
-end
-
-def settings
-  size 200, 200
-  # smooth # here
-end
+```bash
+k9 --help # or -h to show command line options
+# or
+k9 --check # or -? to check configuration
 ```
 
-PS: `k9 -c fred` also works with a bare template defaults, to `size 200 200`
+Installing JRubyArt assumes you have installed a recent version of ruby (which can be either MRI ruby or JRuby)
+
+```bash
+gem install jruby_art
+```
+
+If you __haven't__ installed JRubyArt before, the simplest way to set the configuration, and to install samples is:-
+
+```bash
+k9 --install # no arguments
+```
+
+this also installs `jruby-complete`
+
+If you __have__ installed JRubyArt before, the simplest way to set the configuration is:-
+
+```bash
+k9 -if config
+```
+
+Using `-f` or `--force` flag forces the removal of the previous configuration.
+
+To check your configuration:-
+
+```bash
+k9 --check # or -?
+```
+
+The config file is `config.yml` in the `~/.jruby_art folder`, which you should edit if required.
+
+To explore command line options:-
+
+```bash
+k9 --help # or k9 -h
+```
+
+To explore the installed examples:-
+```bash
+cd ~/k9_samples
+rake # to run examples randomly as a demo
+# or check available tasks with
+rake --tasks
+# use a task to randomly run a group of sketches eg
+rake shaders # runs the shader examples
+```
+
+To create a simple sketch:-
+```bash
+k9 -c fred 200 200 # sketch name=Fred width=200 height=200 mode=default
+k9 -c my_sketch 300 300 p2d # sketch name=MySketch width=300 height=300 mode=P2D
+```
+Edit `fred.rb` or `my_sketch.rb` with your favourite editor preferably `vim`, `emacs` or `atom`.
+
+To run sketch using the command line
+
+```bash
+k9 -r fred.rb
+```
+
+To run a sketch from editor see [editors][editors]
+
+#### Processing
+
+Installing processing is optional but you could us it download the processing.org and contributed libraries.
+You can check to see what platforms are supported [here][platforms].
+
+
+#### Running examples
+
+To explore the installed examples:-
+```bash
+cd ~/k9_samples
+rake # to run examples randomly as a demo
+# or check available tasks with
+rake --tasks
+# use a task to randomly run a group of sketches eg
+rake shaders # runs the shader examples
+```
+#### Create your own sketches
+
+To create a simple sketch:-
+```bash
+k9 -c fred 200 200 # sketch name=Fred width=200 height=200 mode=default
+k9 -c my_sketch 300 300 p2d # sketch name=MySketch width=300 height=300 mode=P2D
+```
+Edit `fred.rb` or `my_sketch.rb` with your favourite editor preferably `vim`, `emacs` or `atom`.
+
+To run sketch using the command line
+
+```bash
+k9 -r fred.rb
+```
+
+To run a sketch from editor see [editors][editors]
 
 Read more about using the [processing api here][api]
 
@@ -191,3 +254,4 @@ Read more about using the [processing api here][api]
 [sound]:https://monkstone.github.io/_posts/minim
 [video]:https://monkstone.github.io/_posts/create_video
 [casey]:https://github.com/processing/processing/wiki/FAQ
+[adopt]:https://adoptopenjdk.net/
